# VimaxCore

./: CMakeLists.txt  README.md
apps/console/: main.cpp
include/vimax/console/: console.hpp
include/vimax/core/: core.hpp  echo_module.hpp  module_registry.hpp  runtime.hpp
include/vimax/modules/: echo_module.hpp
src/: core.cpp  echo_module.cpp  module_registry.cpp  runtime.cpp
src/console/: console.cpp
src/modules/: echo_module.cpp
